<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.group_0471.flybook.ViewItineraries" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout"
        android:icon="@android:drawable/presence_offline"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/logout"/>
    <item
        android:id="@+id/account_settings"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/acc_settings"/>
    <item
        android:id="@+id/shopping_cart"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/cart"/>

</menu>
