<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.group_0471.flybook.RegisterUser" >

    <EditText
        android:id="@+id/user_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_email"
        android:layout_below="@+id/user_email"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/pw_hint"/>

    <EditText
        android:id="@+id/user_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_pw"
        android:layout_below="@+id/user_pw"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName" 
        android:hint="@string/f_name_hint"/>

    <EditText
        android:id="@+id/user_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_last"
        android:layout_below="@+id/user_last"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/address_hint"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/user_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_first"
        android:layout_below="@+id/user_first"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/l_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ccNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_address"
        android:layout_below="@+id/user_address"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/cc_hint" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/newUserName_hint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/register_diaologue" />

    <EditText
        android:id="@+id/cc_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ccNum"
        android:layout_below="@+id/ccNum"
        android:ems="10" 
        android:hint="@string/cc_exp_hint">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cc_exp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="19dp"
        android:onClick="registrationCompleted"
        android:text="@string/submit_button" 
        style="?android:attr/borderlessButtonStyle"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_toRightOf="@+id/button1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</RelativeLayout>