<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.group_0471.flybook.ItineraryInterface" >

    <EditText
        android:id="@+id/itin_dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/itin_origin"
        android:layout_below="@+id/itin_origin"
        android:ems="10"
        android:hint="Destination" >

        <requestFocus />
    </EditText>

    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/timePicker1"
        android:layout_below="@+id/textView2"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/itin_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:ems="10"
        android:hint="@string/origin" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view2"
        android:layout_alignParentTop="true"
        android:text="@string/tv_od"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#3C577F" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView2"
        android:onClick="sortByTime"
        android:text="@string/sbt" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/itin_dest"
        android:layout_alignParentBottom="true"
        android:onClick="sortByDate"
        android:text="@string/sbd" />

    <View
        android:id="@+id/View02"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/itin_dest"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/View02"
        android:layout_below="@+id/View02"
        android:layout_marginTop="14dp"
        android:text="@string/tv_dd"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#3C577F" />

    <View
        android:id="@+id/View01"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/radioButton1"
        android:background="@android:color/darker_gray" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:background="@android:color/darker_gray" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="false" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/datePicker"
        android:layout_below="@+id/datePicker" />

</RelativeLayout>